# lispy

./: .gitignore  CMakeLists.txt
src/: eval.c  eval.h  main.c
